# csv-ve

./: .gitignore  README.md  pyproject.toml  test_csv.csv
src/csv_editor/: csveditorapp.tcss  data_model.py  static_index.py  ui.py
src/csv_ve/: __main__.py  cli.py  data_model.py  ui.py
src/csv_ve/screens/: goto_cell_screen.py
tests/: conftest.py  test_cli.py  test_data_model.py  test_ui.py
