[project]
name = "csv-editor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Calixte Henry", email = "131826512+CalHenry@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
